...
          tabBarIcon: ({ color, size }) => <Home size={size} stroke={color} />,
        }}
      />
      <Tabs.Screen
        name="lens"
        options={{
          title: 'Lens',
          tabBarIcon: ({ color, size }) => <Camera size={size} stroke={color} />,
        }}
      />
      <Tabs.Screen
        name="recipes"
        options={{
...
